2003-12-05  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (html_engine_flush): as below

	* gtkhtml.c (gtk_html_flush): new method, does all scheduled
	parsing

2003-12-04  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (selection_get): explicitly append a string terminator
	to the buffer to make newer mozillas happy.

2003-12-03  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c:  Use parser_clue whereever the the parser is
	actively adding elements.  Us the generic clue where the display
	engine is processing.

	* htmlengine.h: add parser_clue to hold the root of the current
	block.
	
2003-12-03  Radek Doulik  <rodo@ximian.com>

	* htmlprinter.c (get_font_size): scale font size down from pango
	metric

	* htmlgdkpainter.c (alloc_font): don't scale font size up, it's
	already in pango metric now

	* htmlfontmanager.c (get_real_font_size): keep size in pango
	metric

	* htmltext.c (html_pango_attr_font_size_calc): pango is using
	1/PANGO_SCALE and not 1/1000 as stated in documentation - pointed
	out by ross

2003-12-02  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (html_pango_attr_font_size_calc): scale down the font
	size here, before setting to pango attribute, it's already
	multiplied by 1000

	* htmlfontmanager.c (html_font_manager_init): use PANGO_SCALE for font
	sizes
	(get_real_font_size): use PANGO_PIXELS to scale down font sizes

	* gtkhtml.c (gtk_html_set_magnification): use PANGO_SCALE for font
	sizes

	* gtkhtml-propmanager.c (gtk_html_propmanager_apply): PANGO_SCALE
	fonts

	* gtkhtml.c (gtk_html_set_fonts): don't scale font size down here

2003-11-24  Radek Doulik  <rodo@ximian.com>

	* htmlgdkpainter.c (item_gc): set a default color

2003-11-20  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-text.c (upper_lower): use g_utf8 functions to
	lower/upper string

2003-11-18  Radek Doulik  <rodo@ximian.com>

	* Makefile.am: enable deprecated gtk stuff. gtkcombo.h is
	deprecated in gnome2.5. we will require gnome-2.5 soon
