@@ -1,3 +1,7 @@
+2003-12-05  Larry Ewing  <lewing@ximian.com>
+
+	* htmltext.c (save_text_part): don't leak the dup'd string.
+
 2003-12-05  Radek Doulik  <rodo@ximian.com>
 
 	* htmlengine.c (html_engine_flush): as below
